General Changes - Fixed Navbar overlap - Modified the .main class in css to use the viewport width instead of a static value - Added missing row on index.html, and tweaked the modal to be wider

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,9 +10,9 @@ html {
 }
 
 .main{
-    padding-top: 50px;
-    padding-left: 100px;
-    padding-right: 100px;
+    padding-top: 4vw;
+    padding-left: 8vw;
+    padding-right: 8vw;
 }
 
 .section {
